Fix alignment for the sections

--- a/style.css
+++ b/style.css
@@ -154,10 +154,9 @@ nav {
 
 @media screen and (min-width: 1070px) {
   .onme {
-    margin-left: 260px;
-    margin-right: 260px;
-    margin-top: 359px;
-    margin-bottom: 435px;
+    margin: 359px auto 435px;
+    width: 80%;
+    max-width: 1156px;
   }
 
   .hello-greeting {
@@ -285,7 +284,7 @@ nav {
   }
 
   .project-info .tonic-one {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
@@ -294,7 +293,7 @@ nav {
   }
 
   .project-info .work-info .paw {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
@@ -304,7 +303,7 @@ nav {
   }
 
   .project-info .work-info .wap {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -313,7 +312,7 @@ nav {
   }
 
   .project-info .langs {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
@@ -323,7 +322,7 @@ nav {
   }
 
   .project-info .tonic-para {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -346,13 +345,14 @@ nav {
     border: 1px solid #dfe1e6;
     border-radius: 16px;
     background-color: #fff;
-    width: fit-content;
+    width: 80%;
     margin: 0 auto;
+    max-width: 1156px;
   }
 
   .cards:hover {
     border-color: #a7aeff;
-    box-shadow: 0  37px 20px -20px rgba(0, 0, 0, 0.288);
+    box-shadow: 0 37px 20px -20px rgba(0, 0, 0, 0.288);
   }
 
   .cards:nth-child(even) {
@@ -392,7 +392,7 @@ nav {
   }
 
   .project-info .tonic-one {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
@@ -401,7 +401,7 @@ nav {
   }
 
   .project-info .work-info .paw {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
@@ -411,7 +411,7 @@ nav {
   }
 
   .project-info .work-info .wap {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -420,7 +420,7 @@ nav {
   }
 
   .project-info .langs {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
@@ -430,7 +430,7 @@ nav {
   }
 
   .project-info .tonic-para {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -551,7 +551,7 @@ img {
 
 .tonic-btn:hover {
   background-color: #6070ff;
-  box-shadow: 0  37px 20px -20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 37px 20px -20px rgba(0, 0, 0, 0.2);
   color: #fff;
 }
 
@@ -573,7 +573,9 @@ img {
   .lint .onme {
     display: flex;
     gap: 49px;
-    margin: 154px 142px 134px 142px;
+    margin: 142px auto;
+    width: 80%;
+    max-width: 1156px;
   }
 
   .onme-top {
